@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: specfun.c,v 1.43 2010/12/29 18:03:09 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: specfun.c,v 1.44 2010/12/30 07:23:41 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - specfun.c */
@@ -1094,29 +1094,39 @@ ranf(struct value *init)
     static const long Xa1 = 40014L;
     static const long Xa2 = 40692L;
 
+    /* Seed values must be integer, but check for both values equal zero
+       before casting for speed */
+    if (real(init) != 0.0 || imag(init) != 0.0) {
+
+	/* Construct new seed values from input parameter */
+	long seed1cvrt = real(init);
+	long seed2cvrt = imag(init);
+	if ( real(init) != (double)seed1cvrt ||
+	     imag(init) != (double)seed2cvrt ||
+	     seed1cvrt > 017777777777L ||
+	     seed2cvrt > 017777777777L ||
+	     (seed1cvrt <= 0 && seed2cvrt != 0) ||
+	     seed2cvrt < 0 )
+	    int_error(NO_CARET,"Illegal seed value");
+	else if (seed1cvrt < 0)
+	    firsttime = 1;
+	else {
+	    seed1 = seed1cvrt;
+	    seed2 = (seed2cvrt) ? seed2cvrt : seed1cvrt;
+	    firsttime = 0;
+	}
+    }
 
     /* (Re)-Initialize seeds if necessary */
-    if ( real(init) < 0.0 || firsttime == 1) {
+    if (firsttime) {
 	firsttime = 0;
 	seed1 = 1234567890L;
 	seed2 = 1234567890L;
     }
 
-    /* Construct new seed values from input parameter */
-    /* FIXME: Ideally we should allow all 64 bits of seed to be set */
-    if (real(init) > 1.0) {
-	if (real(init) >= (double)(017777777777UL))
-	    int_error(NO_CARET,"Illegal seed value");
-	if (imag(init) >= (double)(017777777777UL))
-	    int_error(NO_CARET,"Illegal seed value");
-	seed1 = (int)real(init);
-	seed2 = (int)imag(init);
-	if (seed2 == 0)
-	    seed2 = seed1;
-    }
-    FPRINTF((stderr,"ranf: seed = %lo %lo        %ld %ld\n", seed1,seed2));
+    FPRINTF((stderr,"ranf: seed = %lo %lo        %ld %ld\n", seed1, seed2));
 
-    /* Generate pseudo random integers */
+    /* Generate pseudo random integers, which always end up positive */
     k = seed1 / 53668L;
     seed1 = Xa1 * (seed1 - k * 53668L) - k * 12211;
     if (seed1 < 0)
